# PaintEditor

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  Tutorial.md  mod.json  watchdog.py
SFML/: Graphics.hpp
src/: main.cpp
